--- a/ums/ums.nuspec
+++ b/ums/ums.nuspec
@@ -1,9 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <package xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
   <metadata>
     <id>ums</id>
     <title>Universal Media Server</title>
-    <version>9.8.2</version>
+    <version>9.8.3</version>
     <authors>SubJunk</authors>
     <owners>dtgm, MANICX100</owners>
     <summary>DLNA-compliant UPnP Media Server</summary>
