--- a/lagrange/lagrange.nuspec
+++ b/lagrange/lagrange.nuspec
@@ -13,7 +13,7 @@ Lagrange is a desktop GUI client for browsing Geminispace. It offers modern conv
 Like Gemini, Lagrange has been designed with minimalism in mind. It depends on a small number of essential libraries. It is written in C and uses SDL for hardware-accelerated graphics. OpenSSL is used for secure communications.
 </description>
     <projectUrl>https://gmi.skyjake.fi/lagrange/</projectUrl>
-    <iconUrl>https://remoteplay.dl.playstation.net/remoteplay/images/icon-remote-play--normal.svg</iconUrl>
+    <iconUrl>https://raw.githubusercontent.com/MANICX100/chocolatey/master/lagrange/icon.ico</iconUrl>
     <tags>gemini gui Lagrange</tags>
     <copyright>Skyjake</copyright>
     <licenseUrl>https://gmi.skyjake.fi/lagrange/</licenseUrl>
