--- a/imazing/imazing.nuspec
+++ b/imazing/imazing.nuspec
@@ -11,6 +11,7 @@
 iMazing is mobile device management software that allows users to transfer files and data between iOS devices Computers without the limitations of iTunes.
     </description>
     <projectUrl>https://imazing.com/</projectUrl>
+    <packageSourceUrl>https://github.com/MANICX100/chocolatey/tree/master/imazing</packageSourceUrl>
     <iconUrl>https://imazing.com/img/imazing-logo.svg</iconUrl>
     <tags>ios imazing itunes</tags>
     <copyright>DigiDNA</copyright>
