--- a/lagrange/lagrange.nuspec
+++ b/lagrange/lagrange.nuspec
@@ -13,10 +13,14 @@ Lagrange is a desktop GUI client for browsing Geminispace. It offers modern conv
 Like Gemini, Lagrange has been designed with minimalism in mind. It depends on a small number of essential libraries. It is written in C and uses SDL for hardware-accelerated graphics. OpenSSL is used for secure communications.
 </description>
     <projectUrl>https://gmi.skyjake.fi/lagrange/</projectUrl>
-    <iconUrl>https://raw.githubusercontent.com/MANICX100/chocolatey/master/lagrange/icon.ico</iconUrl>
+    <iconUrl>https://rawcdn.githack.com/MANICX100/chocolatey/4dc3ca831181a4d51a6f38e7ed2ace6c05fa6e2e/lagrange/icon.ico</iconUrl>
     <tags>gemini gui Lagrange</tags>
     <copyright>Skyjake</copyright>
-    <licenseUrl>https://gmi.skyjake.fi/lagrange/</licenseUrl>
+    <licenseUrl>https://github.com/skyjake/lagrange/blob/dev/LICENSE.md</licenseUrl>
+    <packageSourceUrl>https://github.com/MANICX100/chocolatey/tree/master/lagrange/</packageSourceUrl>
+    <bugTrackerUrl>https://github.com/skyjake/lagrange/issues/</bugTrackerUrl>
+    <docsUrl>https://gmi.skyjake.fi/lagrange/</docsUrl>
+     <mailingListUrl>mailto://jaakko.keranen@iki.fi</mailingListUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <releaseNotes>
 #### Program
